ecmascript/parser/tests/test262-error-references/fail/4f0b15bd78646107.js.stderr
error: TS2406
 --> $DIR/tests/test262-parser/fail/4f0b15bd78646107.js:1:1
  |
1 | 1--
  | ^

